--- a/AUXL496_CSAT.ioc
+++ b/AUXL496_CSAT.ioc
@@ -2,14 +2,24 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.CalculateBaudRate=333333
-CAN1.CalculateTimeBit=3000
-CAN1.CalculateTimeQuantum=1000.0
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
-CAN2.CalculateBaudRate=333333
-CAN2.CalculateTimeBit=3000
-CAN2.CalculateTimeQuantum=1000.0
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN1.AWUM=ENABLE
+CAN1.BS1=CAN_BS1_13TQ
+CAN1.BS2=CAN_BS2_2TQ
+CAN1.CalculateBaudRate=1000000
+CAN1.CalculateTimeBit=1000
+CAN1.CalculateTimeQuantum=62.5
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,TXFP,AWUM
+CAN1.Prescaler=2
+CAN1.TXFP=ENABLE
+CAN2.AWUM=ENABLE
+CAN2.BS1=CAN_BS1_13TQ
+CAN2.BS2=CAN_BS2_2TQ
+CAN2.CalculateBaudRate=1000000
+CAN2.CalculateTimeBit=1000
+CAN2.CalculateTimeQuantum=62.5
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,TXFP,BS2,AWUM
+CAN2.Prescaler=2
+CAN2.TXFP=ENABLE
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
 Dma.Request2=USART3_RX
@@ -73,18 +83,22 @@ Mcu.Pin0=PC0
 Mcu.Pin1=PC1
 Mcu.Pin10=PB12
 Mcu.Pin11=PB13
-Mcu.Pin12=PC6
-Mcu.Pin13=PC7
-Mcu.Pin14=PC8
-Mcu.Pin15=PC9
-Mcu.Pin16=PA8
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PB8
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PC6
+Mcu.Pin15=PC7
+Mcu.Pin16=PC8
+Mcu.Pin17=PC9
+Mcu.Pin18=PA8
+Mcu.Pin19=PA11
 Mcu.Pin2=PC2
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PA12
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PC3
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -92,16 +106,13 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-Mcu.PinsNb=23
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496RGTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -146,6 +157,22 @@ PB12.Mode=CAN_Activate
 PB12.Signal=CAN2_RX
 PB13.Mode=CAN_Activate
 PB13.Signal=CAN2_TX
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=CAN2_STB
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=CAN2_SHTD
+PB15.Locked=true
+PB15.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=CAN1_STB
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=CAN1_SHTD
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PB8.Mode=CAN_Activate
 PB8.Signal=CAN1_RX
 PB9.Mode=CAN_Activate
@@ -220,17 +247,15 @@ ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_CAN1_Init-CAN1-false-HAL-true,8-MX_CAN2_Init-CAN2-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=64000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimCLKDivider=2
-RCC.APB1TimFreq_Value=32000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=64000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=32000000
-RCC.APB2TimCLKDivider=2
 RCC.APB2TimFreq_Value=64000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CortexFreq_Value=64000000
-RCC.DFSDMFreq_Value=16000000
+RCC.DFSDMFreq_Value=32000000
 RCC.FCLKCortexFreq_Value=64000000
 RCC.FLatency=FLASH_LATENCY_3
 RCC.FamilyName=M
@@ -238,14 +263,14 @@ RCC.HCLKFreq_Value=64000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=16000000
-RCC.I2C2Freq_Value=16000000
-RCC.I2C3Freq_Value=16000000
-RCC.I2C4Freq_Value=16000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimCLKDivider,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
-RCC.LPTIM1Freq_Value=16000000
-RCC.LPTIM2Freq_Value=16000000
-RCC.LPUART1Freq_Value=16000000
+RCC.I2C1Freq_Value=32000000
+RCC.I2C2Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
+RCC.I2C4Freq_Value=32000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LPTIM1Freq_Value=32000000
+RCC.LPTIM2Freq_Value=32000000
+RCC.LPUART1Freq_Value=32000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -267,14 +292,14 @@ RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=48000000
 RCC.SAI2Freq_Value=48000000
 RCC.SDMMCFreq_Value=48000000
-RCC.SWPMI1Freq_Value=16000000
+RCC.SWPMI1Freq_Value=32000000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=16000000
-RCC.UART5Freq_Value=16000000
+RCC.UART4Freq_Value=32000000
+RCC.UART5Freq_Value=32000000
 RCC.USART1Freq_Value=32000000
-RCC.USART2Freq_Value=16000000
-RCC.USART3Freq_Value=16000000
+RCC.USART2Freq_Value=32000000
+RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=256000000
