--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 CAN1.AWUM=ENABLE
 CAN1.BS1=CAN_BS1_13TQ
@@ -62,9 +62,9 @@ Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
+GPIO.groupedBy=
 KeepUserPlacement=false
-Mcu.CPN=STM32L496RGT6
+Mcu.CPN=STM32L4A6VGT6P
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=CAN2
@@ -74,11 +74,10 @@ Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=USART2
 Mcu.IP7=USART3
-Mcu.IP8=USB_DEVICE
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
-Mcu.Name=STM32L496R(E-G)Tx
-Mcu.Package=LQFP64
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
+Mcu.Name=STM32L4A6VGTxP
+Mcu.Package=LQFP100
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
 Mcu.Pin10=PB12
@@ -109,7 +108,7 @@ Mcu.Pin9=PC5
 Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32L496RGTx
+Mcu.UserName=STM32L4A6VGTxP
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -125,7 +124,6 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -222,7 +220,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32L496RGTx
+ProjectManager.DeviceId=STM32L4A6VGTxP
 ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.18.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -232,10 +230,10 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=STM32CubeIDE
+ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=AUXL496_CSAT.ioc
-ProjectManager.ProjectName=AUXL496_CSAT
+ProjectManager.ProjectFileName=SCIL496_CSAT.ioc
+ProjectManager.ProjectName=SCIL496_CSAT
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -244,7 +242,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_CAN1_Init-CAN1-false-HAL-true,8-MX_CAN2_Init-CAN2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -310,15 +308,9 @@ USART2.SwapParam=ADVFEATURE_SWAP_ENABLE
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
-USB_DEVICE.VirtualMode=Cdc
-USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
-isbadioc=false
