--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -1,216 +1,120 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=[]
-CAD.pinconfig=Dual
+CAD.formats=
+CAD.pinconfig=
 CAD.provider=
-CAN1.AWUM=ENABLE
-CAN1.BS1=CAN_BS1_13TQ
-CAN1.BS2=CAN_BS2_2TQ
-CAN1.CalculateBaudRate=1000000
-CAN1.CalculateTimeBit=1000
-CAN1.CalculateTimeQuantum=62.5
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,TXFP,AWUM
-CAN1.Prescaler=2
-CAN1.TXFP=ENABLE
-CAN2.AWUM=ENABLE
-CAN2.BS1=CAN_BS1_13TQ
-CAN2.BS2=CAN_BS2_2TQ
-CAN2.CalculateBaudRate=1000000
-CAN2.CalculateTimeBit=1000
-CAN2.CalculateTimeQuantum=62.5
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,TXFP,BS2,AWUM
-CAN2.Prescaler=2
-CAN2.TXFP=ENABLE
-Dma.Request0=USART2_RX
-Dma.Request1=USART2_TX
-Dma.Request2=USART3_RX
-Dma.Request3=USART3_TX
-Dma.RequestsNb=4
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.Instance=DMA1_Channel6
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_CIRCULAR
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.1.Instance=DMA1_Channel7
-Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.1.Mode=DMA_NORMAL
-Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART3_RX.2.Instance=DMA1_Channel3
-Dma.USART3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.2.Mode=DMA_CIRCULAR
-Dma.USART3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_RX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.3.Instance=DMA1_Channel2
-Dma.USART3_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.3.Mode=DMA_NORMAL
-Dma.USART3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+CAN1.CalculateBaudRate=666666
+CAN1.CalculateTimeBit=1500
+CAN1.CalculateTimeQuantum=500.0
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN2.CalculateBaudRate=666666
+CAN2.CalculateTimeBit=1500
+CAN2.CalculateTimeQuantum=500.0
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 File.Version=6
-GPIO.groupedBy=
 KeepUserPlacement=false
-Mcu.CPN=STM32L4A6VGT6P
+Mcu.CPN=STM32L496VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=CAN2
-Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
-Mcu.Name=STM32L4A6VGTxP
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USB_DEVICE
+Mcu.IP6=USB_OTG_FS
+Mcu.IPNb=7
+Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC0
-Mcu.Pin1=PC1
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PC6
-Mcu.Pin15=PC7
-Mcu.Pin16=PC8
-Mcu.Pin17=PC9
-Mcu.Pin18=PA8
-Mcu.Pin19=PA11
-Mcu.Pin2=PC2
-Mcu.Pin20=PA12
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=PB8
-Mcu.Pin24=PB9
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PC3
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PC4
-Mcu.Pin9=PC5
-Mcu.PinsNb=27
+Mcu.Pin0=PB12
+Mcu.Pin1=PD8
+Mcu.Pin10=PD1
+Mcu.Pin11=PB5
+Mcu.Pin12=PB6
+Mcu.Pin13=PE0
+Mcu.Pin14=PE1
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin2=PD9
+Mcu.Pin3=PD10
+Mcu.Pin4=PD15
+Mcu.Pin5=PA8
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.Pin8=PA15 (JTDI)
+Mcu.Pin9=PD0
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32L4A6VGTxP
+Mcu.UserName=STM32L496VGTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CAN2_SCE_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=ATTENTION
-PA4.Locked=true
-PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=EPS_RST
-PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA15\ (JTDI).GPIOParameters=GPIO_Label
+PA15\ (JTDI).GPIO_Label=LED5
+PA15\ (JTDI).Locked=true
+PA15\ (JTDI).Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=LED5
+PA8.GPIO_Label=LED4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PB12.Mode=CAN_Activate
-PB12.Signal=CAN2_RX
-PB13.Mode=CAN_Activate
-PB13.Signal=CAN2_TX
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=CAN2_STB
-PB14.Locked=true
-PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=CAN2_SHTD
-PB15.Locked=true
-PB15.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=CAN1_STB
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=LED1
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Mode=CAN_Activate
+PB5.Signal=CAN2_RX
 PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=CAN1_SHTD
-PB7.Locked=true
-PB7.Signal=GPIO_Output
-PB8.Mode=CAN_Activate
-PB8.Signal=CAN1_RX
-PB9.Mode=CAN_Activate
-PB9.Signal=CAN1_TX
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=AVI_RST
-PC0.Locked=true
-PC0.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=SCI_RST
-PC1.Locked=true
-PC1.Signal=GPIO_Output
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=COMM1_RST
-PC2.Locked=true
-PC2.Signal=GPIO_Output
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=COMM2_RST
-PC3.Locked=true
-PC3.Signal=GPIO_Output
-PC4.Mode=Asynchronous
-PC4.Signal=USART3_TX
-PC5.Mode=Asynchronous
-PC5.Signal=USART3_RX
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=LED1
-PC6.Locked=true
-PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=LED2
-PC7.Locked=true
-PC7.Signal=GPIO_Output
-PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=LED3
-PC8.Locked=true
-PC8.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=LED4
-PC9.Locked=true
-PC9.Signal=GPIO_Output
+PB6.Mode=CAN_Activate
+PB6.Signal=CAN2_TX
+PD0.Mode=CAN_Activate
+PD0.Signal=CAN1_RX
+PD1.Mode=CAN_Activate
+PD1.Signal=CAN1_TX
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=LED2
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=LED3
+PD15.Locked=true
+PD15.Signal=GPIO_Output
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=CAN1_STB
+PD8.Locked=true
+PD8.Signal=GPIO_Output
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=CAN1_SHTD
+PD9.Locked=true
+PD9.Signal=GPIO_Output
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=CAN2_STB
+PE0.Locked=true
+PE0.Signal=GPIO_Output
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=CAN2_SHTD
+PE1.Locked=true
+PE1.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -220,7 +124,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32L4A6VGTxP
+ProjectManager.DeviceId=STM32L496VGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.18.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -242,8 +146,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
-RCC.ADCFreq_Value=48000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=32000000
@@ -255,7 +158,6 @@ RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CortexFreq_Value=64000000
 RCC.DFSDMFreq_Value=32000000
 RCC.FCLKCortexFreq_Value=64000000
-RCC.FLatency=FLASH_LATENCY_3
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=64000000
 RCC.HSE_VALUE=8000000
@@ -265,7 +167,7 @@ RCC.I2C1Freq_Value=32000000
 RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
 RCC.I2C4Freq_Value=32000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPUART1Freq_Value=32000000
@@ -274,21 +176,19 @@ RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MSI_VALUE=4000000
-RCC.PLLN=64
-RCC.PLLPoutputFreq_Value=128000000
-RCC.PLLQoutputFreq_Value=128000000
-RCC.PLLR=RCC_PLLR_DIV4
+RCC.PLLN=32
+RCC.PLLPoutputFreq_Value=64000000
+RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
-RCC.PLLSAI1N=24
-RCC.PLLSAI1PoutputFreq_Value=48000000
-RCC.PLLSAI1QoutputFreq_Value=48000000
-RCC.PLLSAI1RoutputFreq_Value=48000000
+RCC.PLLSAI1PoutputFreq_Value=16000000
+RCC.PLLSAI1QoutputFreq_Value=16000000
+RCC.PLLSAI1RoutputFreq_Value=16000000
 RCC.PLLSAI2PoutputFreq_Value=16000000
 RCC.PLLSAI2RoutputFreq_Value=16000000
 RCC.PWRFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=48000000
-RCC.SAI2Freq_Value=48000000
+RCC.SAI1Freq_Value=16000000
+RCC.SAI2Freq_Value=16000000
 RCC.SDMMCFreq_Value=48000000
 RCC.SWPMI1Freq_Value=32000000
 RCC.SYSCLKFreq_VALUE=64000000
@@ -300,17 +200,18 @@ RCC.USART2Freq_Value=32000000
 RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=256000000
-RCC.VCOSAI1OutputFreq_Value=96000000
+RCC.VCOOutputFreq_Value=128000000
+RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.VCOSAI2OutputFreq_Value=32000000
-USART2.IPParameters=VirtualMode-Asynchronous,SwapParam
-USART2.SwapParam=ADVFEATURE_SWAP_ENABLE
-USART2.VirtualMode-Asynchronous=VM_ASYNC
-USART3.IPParameters=VirtualMode-Asynchronous
-USART3.VirtualMode-Asynchronous=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
+isbadioc=false
