CyphalTransfer memory leak plugged, communication works

--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -2,14 +2,24 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.CalculateBaudRate=666666
-CAN1.CalculateTimeBit=1500
-CAN1.CalculateTimeQuantum=500.0
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
-CAN2.CalculateBaudRate=666666
-CAN2.CalculateTimeBit=1500
-CAN2.CalculateTimeQuantum=500.0
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN1.AWUM=ENABLE
+CAN1.BS1=CAN_BS1_13TQ
+CAN1.BS2=CAN_BS2_2TQ
+CAN1.CalculateBaudRate=1000000
+CAN1.CalculateTimeBit=1000
+CAN1.CalculateTimeQuantum=62.5
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,AWUM,TXFP
+CAN1.Prescaler=2
+CAN1.TXFP=ENABLE
+CAN2.AWUM=ENABLE
+CAN2.BS1=CAN_BS1_13TQ
+CAN2.BS2=CAN_BS2_2TQ
+CAN2.CalculateBaudRate=1000000
+CAN2.CalculateTimeBit=1000
+CAN2.CalculateTimeQuantum=62.5
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,AWUM,TXFP
+CAN2.Prescaler=2
+CAN2.TXFP=ENABLE
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32L496VGT6
@@ -24,24 +34,25 @@ Mcu.IP6=USB_OTG_FS
 Mcu.IPNb=7
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PB12
-Mcu.Pin1=PD8
-Mcu.Pin10=PD1
-Mcu.Pin11=PB5
-Mcu.Pin12=PB6
-Mcu.Pin13=PE0
-Mcu.Pin14=PE1
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin2=PD9
-Mcu.Pin3=PD10
-Mcu.Pin4=PD15
-Mcu.Pin5=PA8
-Mcu.Pin6=PA11
-Mcu.Pin7=PA12
-Mcu.Pin8=PA15 (JTDI)
-Mcu.Pin9=PD0
-Mcu.PinsNb=17
+Mcu.Pin0=PB2
+Mcu.Pin1=PB12
+Mcu.Pin10=PD0
+Mcu.Pin11=PD1
+Mcu.Pin12=PB5
+Mcu.Pin13=PB6
+Mcu.Pin14=PE0
+Mcu.Pin15=PE1
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin2=PD8
+Mcu.Pin3=PD9
+Mcu.Pin4=PD10
+Mcu.Pin5=PD15
+Mcu.Pin6=PA8
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA15 (JTDI)
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496VGTx
@@ -81,6 +92,11 @@ PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=LED1
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB2.GPIOParameters=PinState,GPIO_Label
+PB2.GPIO_Label=ATTN
+PB2.Locked=true
+PB2.PinState=GPIO_PIN_SET
+PB2.Signal=GPIO_Output
 PB5.Locked=true
 PB5.Mode=CAN_Activate
 PB5.Signal=CAN2_RX
