temporary branch with tests of power management

--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -21,38 +21,44 @@ CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS
 CAN2.Prescaler=2
 CAN2.TXFP=ENABLE
 File.Version=6
+I2C4.IPParameters=Timing
+I2C4.Timing=0x00503D58
 KeepUserPlacement=false
 Mcu.CPN=STM32L496VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=CAN2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USB_DEVICE
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP2=I2C4
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USB_DEVICE
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PB2
-Mcu.Pin1=PB12
-Mcu.Pin10=PD0
-Mcu.Pin11=PD1
-Mcu.Pin12=PB5
-Mcu.Pin13=PB6
-Mcu.Pin14=PE0
-Mcu.Pin15=PE1
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin2=PD8
-Mcu.Pin3=PD9
-Mcu.Pin4=PD10
-Mcu.Pin5=PD15
-Mcu.Pin6=PA8
-Mcu.Pin7=PA11
-Mcu.Pin8=PA12
-Mcu.Pin9=PA15 (JTDI)
-Mcu.PinsNb=18
+Mcu.Pin0=PB0
+Mcu.Pin1=PB2
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA15 (JTDI)
+Mcu.Pin13=PD0
+Mcu.Pin14=PD1
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
+Mcu.Pin17=PE0
+Mcu.Pin18=PE1
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PB12
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PD8
+Mcu.Pin4=PD9
+Mcu.Pin5=PD10
+Mcu.Pin6=PD12
+Mcu.Pin7=PD13
+Mcu.Pin8=PD15
+Mcu.Pin9=PA8
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496VGTx
@@ -88,6 +94,11 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=LED4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PB0.GPIOParameters=PinState,GPIO_Label
+PB0.GPIO_Label=POWER_RST
+PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
+PB0.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=LED1
 PB12.Locked=true
@@ -111,6 +122,12 @@ PD10.GPIOParameters=GPIO_Label
 PD10.GPIO_Label=LED2
 PD10.Locked=true
 PD10.Signal=GPIO_Output
+PD12.Locked=true
+PD12.Mode=I2C
+PD12.Signal=I2C4_SCL
+PD13.Locked=true
+PD13.Mode=I2C
+PD13.Signal=I2C4_SDA
 PD15.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=LED3
 PD15.Locked=true
@@ -162,7 +179,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=32000000
@@ -182,8 +199,9 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=32000000
 RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
-RCC.I2C4Freq_Value=32000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.I2C4CLockSelection=RCC_I2C4CLKSOURCE_HSI
+RCC.I2C4Freq_Value=16000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4CLockSelection,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPUART1Freq_Value=32000000
