--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -97,7 +97,7 @@ PA8.Signal=GPIO_Output
 PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=POWER_RST
 PB0.Locked=true
-PB0.PinState=GPIO_PIN_SET
+PB0.PinState=GPIO_PIN_RESET
 PB0.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=LED1
