--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -20,7 +20,13 @@ CAN2.CalculateTimeQuantum=62.5
 CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,AWUM,TXFP
 CAN2.Prescaler=2
 CAN2.TXFP=ENABLE
+DCMI.IPParameters=JPEGMode
+DCMI.JPEGMode=DCMI_JPEG_DISABLE
 File.Version=6
+I2C1.IPParameters=Timing
+I2C1.Timing=0x00B07CB4
+I2C2.IPParameters=Timing
+I2C2.Timing=0x00B07CB4
 I2C4.IPParameters=Timing
 I2C4.Timing=0x00503D58
 KeepUserPlacement=false
@@ -28,41 +34,59 @@ Mcu.CPN=STM32L496VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=CAN2
-Mcu.IP2=I2C4
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USB_DEVICE
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=DCMI
+Mcu.IP3=I2C1
+Mcu.IP4=I2C2
+Mcu.IP5=I2C4
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=11
 Mcu.Name=STM32L496V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PD12
-Mcu.Pin11=PD13
-Mcu.Pin12=PD15
-Mcu.Pin13=PA8
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PA15 (JTDI)
-Mcu.Pin17=PD0
-Mcu.Pin18=PD1
-Mcu.Pin19=PB5
-Mcu.Pin2=PB0
-Mcu.Pin20=PB6
-Mcu.Pin21=PE0
-Mcu.Pin22=PE1
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PB2
-Mcu.Pin4=PB12
-Mcu.Pin5=PB14
-Mcu.Pin6=PB15
-Mcu.Pin7=PD8
-Mcu.Pin8=PD9
-Mcu.Pin9=PD10
-Mcu.PinsNb=25
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PD8
+Mcu.Pin15=PD9
+Mcu.Pin16=PD10
+Mcu.Pin17=PD12
+Mcu.Pin18=PD13
+Mcu.Pin19=PD15
+Mcu.Pin2=PE4
+Mcu.Pin20=PC6
+Mcu.Pin21=PC7
+Mcu.Pin22=PC8
+Mcu.Pin23=PC9
+Mcu.Pin24=PA8
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA15 (JTDI)
+Mcu.Pin28=PD0
+Mcu.Pin29=PD1
+Mcu.Pin3=PE5
+Mcu.Pin30=PD3
+Mcu.Pin31=PB5
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=PB8
+Mcu.Pin35=PB9
+Mcu.Pin36=PE0
+Mcu.Pin37=PE1
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin4=PE6
+Mcu.Pin5=PA4
+Mcu.Pin6=PA6
+Mcu.Pin7=PB0
+Mcu.Pin8=PB2
+Mcu.Pin9=PB11
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496VGTx
@@ -94,6 +118,10 @@ PA15\ (JTDI).GPIOParameters=GPIO_Label
 PA15\ (JTDI).GPIO_Label=LED5
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Signal=GPIO_Output
+PA4.Mode=Slave_8_bits_External_Synchro
+PA4.Signal=DCMI_HSYNC
+PA6.Mode=Slave_8_bits_External_Synchro
+PA6.Signal=DCMI_PIXCLK
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=LED4
 PA8.Locked=true
@@ -103,10 +131,15 @@ PB0.GPIO_Label=POWER_RST
 PB0.Locked=true
 PB0.PinState=GPIO_PIN_RESET
 PB0.Signal=GPIO_Output
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=LED1
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.Locked=true
+PB13.Mode=I2C
+PB13.Signal=I2C2_SCL
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=ENABLE_2V8
 PB14.Locked=true
@@ -126,6 +159,22 @@ PB5.Signal=CAN2_RX
 PB6.Locked=true
 PB6.Mode=CAN_Activate
 PB6.Signal=CAN2_TX
+PB7.Mode=Slave_8_bits_External_Synchro
+PB7.Signal=DCMI_VSYNC
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
+PC6.Mode=Slave_8_bits_External_Synchro
+PC6.Signal=DCMI_D0
+PC7.Mode=Slave_8_bits_External_Synchro
+PC7.Signal=DCMI_D1
+PC8.Mode=Slave_8_bits_External_Synchro
+PC8.Signal=DCMI_D2
+PC9.Mode=Slave_8_bits_External_Synchro
+PC9.Signal=DCMI_D3
 PD0.Mode=CAN_Activate
 PD0.Signal=CAN1_RX
 PD1.Mode=CAN_Activate
@@ -144,6 +193,8 @@ PD15.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=LED3
 PD15.Locked=true
 PD15.Signal=GPIO_Output
+PD3.Mode=Slave_8_bits_External_Synchro
+PD3.Signal=DCMI_D5
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=CAN1_STB
 PD8.Locked=true
@@ -170,6 +221,12 @@ PE3.GPIO_Label=CAMERA_S1
 PE3.Locked=true
 PE3.PinState=GPIO_PIN_SET
 PE3.Signal=GPIO_Output
+PE4.Mode=Slave_8_bits_External_Synchro
+PE4.Signal=DCMI_D4
+PE5.Mode=Slave_8_bits_External_Synchro
+PE5.Signal=DCMI_D6
+PE6.Mode=Slave_8_bits_External_Synchro
+PE6.Signal=DCMI_D7
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -201,7 +258,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=32000000
