--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -67,26 +67,30 @@ Mcu.Pin24=PA8
 Mcu.Pin25=PA11
 Mcu.Pin26=PA12
 Mcu.Pin27=PA15 (JTDI)
-Mcu.Pin28=PD0
-Mcu.Pin29=PD1
+Mcu.Pin28=PC11
+Mcu.Pin29=PD0
 Mcu.Pin3=PE5
-Mcu.Pin30=PD3
-Mcu.Pin31=PB5
-Mcu.Pin32=PB6
-Mcu.Pin33=PB7
-Mcu.Pin34=PB8
-Mcu.Pin35=PB9
-Mcu.Pin36=PE0
-Mcu.Pin37=PE1
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PD1
+Mcu.Pin31=PD3
+Mcu.Pin32=PD7
+Mcu.Pin33=PB3 (JTDO/TRACESWO)
+Mcu.Pin34=PB4 (NJTRST)
+Mcu.Pin35=PB5
+Mcu.Pin36=PB6
+Mcu.Pin37=PB7
+Mcu.Pin38=PB8
+Mcu.Pin39=PB9
 Mcu.Pin4=PE6
+Mcu.Pin40=PE0
+Mcu.Pin41=PE1
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PA4
 Mcu.Pin6=PA6
 Mcu.Pin7=PB0
 Mcu.Pin8=PB2
 Mcu.Pin9=PB11
-Mcu.PinsNb=40
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496VGTx
@@ -153,6 +157,14 @@ PB2.GPIO_Label=ATTN
 PB2.Locked=true
 PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
+PB3\ (JTDO/TRACESWO).GPIOParameters=GPIO_Label
+PB3\ (JTDO/TRACESWO).GPIO_Label=CAMERA_RST
+PB3\ (JTDO/TRACESWO).Locked=true
+PB3\ (JTDO/TRACESWO).Signal=GPIO_Output
+PB4\ (NJTRST).GPIOParameters=GPIO_Label
+PB4\ (NJTRST).GPIO_Label=CAMERA_PWR_DN
+PB4\ (NJTRST).Locked=true
+PB4\ (NJTRST).Signal=GPIO_Output
 PB5.Locked=true
 PB5.Mode=CAN_Activate
 PB5.Signal=CAN2_RX
@@ -167,6 +179,10 @@ PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=CAMERA_HW_CLK
+PC11.Locked=true
+PC11.Signal=GPIO_Output
 PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
 PC7.Mode=Slave_8_bits_External_Synchro
@@ -195,6 +211,10 @@ PD15.Locked=true
 PD15.Signal=GPIO_Output
 PD3.Mode=Slave_8_bits_External_Synchro
 PD3.Signal=DCMI_D5
+PD7.GPIOParameters=GPIO_Label
+PD7.GPIO_Label=CAMERA_STROBE
+PD7.Locked=true
+PD7.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=CAN1_STB
 PD8.Locked=true
@@ -258,7 +278,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_I2C4_Init-I2C4-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=32000000
