turn up warnings and errors, make code compile without errors

--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -179,9 +179,10 @@ PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC11.GPIOParameters=GPIO_Label
+PC11.GPIOParameters=PinState,GPIO_Label
 PC11.GPIO_Label=CAMERA_HW_CLK
 PC11.Locked=true
+PC11.PinState=GPIO_PIN_SET
 PC11.Signal=GPIO_Output
 PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
